--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,11 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	/*implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'javax.persistence', name: 'persistence-api', version: '1.0'    // Use MySQL Connector-J
+	implementation 'mysql:mysql-connector-java'*/
 }
+
 
 test {
 	useJUnitPlatform()
